--- a/Wijesiri.Motors.WebApi/package.json
+++ b/Wijesiri.Motors.WebApi/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^2.5.0",
-    "wijesirimotorsschemas": "file:../Wijesiri.Motors.Models/wijesirimotorsschemas-1.0.0.tgz",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.0",
     "common-errors": "^1.0.4",
     "compression": "^1.7.0",
@@ -18,11 +18,13 @@
     "express": "^4.15.4",
     "fs": "0.0.1-security",
     "http-status": "^1.0.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.14",
     "mongoose": "^4.13.8",
     "mongoose-sequence": "^4.0.0",
+    "wijesirimotorsschemas": "file:../Wijesiri.Motors.Models/wijesirimotorsschemas-1.0.0.tgz",
     "winston": "^2.3.1"
   }
 }
