--- a/Wijesiri.Motors.WebApp/package.json
+++ b/Wijesiri.Motors.WebApp/package.json
@@ -36,8 +36,8 @@
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/router": "6.0.2",
-    "@coreui/coreui": "^2.0.1",
     "@coreui/angular": "^2.0.0-rc.0",
+    "@coreui/coreui": "^2.0.1",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
     "chart.js": "2.7.2",
@@ -49,7 +49,7 @@
     "ng2-charts": "1.6.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
-    "rxjs": "6.1.0",
+    "rxjs": "^6.1.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.26"
