--- a/Wijesiri.Motors.WebApp/package.json
+++ b/Wijesiri.Motors.WebApp/package.json
@@ -38,9 +38,11 @@
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "1.6.0",
+    "ng2-translate": "^5.0.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
     "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.2.0",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.26"
