--- a/Wijesiri.Motors.WebApp/package.json
+++ b/Wijesiri.Motors.WebApp/package.json
@@ -18,14 +18,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.2",
-    "@angular/cdk": "^6.3.0",
+    "@angular/animations": "^6.0.2",
+    "@angular/cdk": "github:angular/cdk-builds",
     "@angular/common": "6.0.2",
     "@angular/compiler": "6.0.2",
     "@angular/core": "6.0.2",
     "@angular/forms": "6.0.2",
     "@angular/http": "6.0.2",
-    "@angular/material": "^6.3.0",
+    "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "6.0.2",
     "@angular/platform-browser-dynamic": "6.0.2",
     "@angular/router": "6.0.2",
@@ -37,14 +37,16 @@
     "core-js": "2.5.6",
     "flag-icon-css": "3.0.0",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "moment": "2.22.1",
     "mutationobserver-shim": "^0.3.2",
     "ng2-charts": "1.6.0",
     "ng2-translate": "^5.0.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
-    "rxjs": "^6.1.0",
+    "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.0",
+    "save": "^2.3.2",
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "1.1.2",
     "zone.js": "0.8.26"
