vehicle/preloader added

--- a/Wijesiri.Motors.WebApp/package.json
+++ b/Wijesiri.Motors.WebApp/package.json
@@ -44,6 +44,7 @@
     "ng2-translate": "^5.0.0",
     "ngx-bootstrap": "3.0.0",
     "ngx-perfect-scrollbar": "6.1.0",
+    "ngx-spinner": "^6.0.0",
     "rxjs": "^6.2.1",
     "rxjs-compat": "^6.2.0",
     "save": "^2.3.2",
