--- a/Wijesiri.Motors.WebApp/package.json
+++ b/Wijesiri.Motors.WebApp/package.json
@@ -33,6 +33,7 @@
     "@coreui/coreui": "^2.0.1",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
     "@coreui/icons": "^0.1.1",
+    "angular2-datatable": "^0.6.0",
     "chart.js": "2.7.2",
     "core-js": "2.5.6",
     "flag-icon-css": "3.0.0",
